[gd_scene load_steps=3 format=3 uid="uid://bkflhj53mucsg"]

[ext_resource type="Script" path="res://Description/DescriptionTest/DescriptionTest.gd" id="1_idkg5"]
[ext_resource type="Texture2D" uid="uid://b0t6wnpntqvfb" path="res://Sprites/HUDSprites/flask_empty.png" id="2_hehx5"]

[node name="DescriptionTest" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_idkg5")
text = "테스트"

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
texture_normal = ExtResource("2_hehx5")
texture_pressed = ExtResource("2_hehx5")
texture_hover = ExtResource("2_hehx5")
texture_disabled = ExtResource("2_hehx5")
texture_focused = ExtResource("2_hehx5")

[connection signal="mouse_entered" from="TextureButton" to="." method="mouse_in"]
[connection signal="mouse_exited" from="TextureButton" to="." method="mouse_out"]
